# ToolsFunctions

./: README.md
ETools/: CMakeLists.txt  main.cpp  references.txt
ETools/include/: ToolFunctions.h
ETools/src/: ToolFunctions.cpp
